update (10th commit)

--- a/web-dev-projects.html
+++ b/web-dev-projects.html
@@ -39,7 +39,7 @@
     <div class="menu-section">
       
      <button class="menu" id="">
-       Menu
+       <img src="icons/Hamburger_icon.svg.png " alt="whatsapp-logo" height="10px" width="10px" class="logo-icon" id="menu-icon"/>
      </button><br>
     </div>
     
@@ -403,10 +403,10 @@
   
   <br />
   <footer>
-        <a href="#">
-      <button class="top">
-        TOP
-      </button>
+      <a href="#">
+      <span class="top">
+      <img src="icons/BTT.png " alt="back to top icon" height="10px" width="10px" class="logo-icon"/>
+      </span>
     </a>
     <br>
     <hr>
