update  (added more design imgs to the graphics page)

--- a/graphics-design-projects.html
+++ b/graphics-design-projects.html
@@ -141,6 +141,42 @@
           class="img-design"/>  
       </span>
   <br />
+  
+   <span class="img-dev">
+          <img src="Design-img/fabian's-logo.png " alt="fabian's-logo-img" height="300px" width="280px" 
+          class="img-design"/>  
+      </span>
+  <br />
+  
+   <span class="img-dev">
+          <img src="Design-img/Fabian matric flyer_20250407_002108_0000.jpg " alt="Fabian matric flyer-img" height="300px" width="280px" 
+          class="img-design"/>  
+      </span>
+  <br />
+  
+   <span class="img-dev">
+          <img src="Design-img/Cynthia Fragrance-logo.png " alt="Cynthia Fragrance-log-img" height="300px" width="280px" 
+          class="img-design"/>  
+      </span>
+  <br />
+  
+   <span class="img-dev">
+          <img src="Design-img/Mothers day flyer.jpg " alt="Mothers day flyes-img" height="300px" width="280px" 
+          class="img-design"/>  
+      </span>
+  <br />
+  
+   <span class="img-dev">
+          <img src="Design-img/Olachi's matriculation invitation flyer.jpg " alt="Olachi's matriculation invitations-img" height="300px" width="280px" 
+          class="img-design"/>  
+      </span>
+  <br />
+  
+   <span class="img-dev">
+          <img src="Design-img/lydia's-matric-flyer.jpg" alt"lydia's-matric-flye-img" height="300px" width="280px" 
+          class="img-design"/>  
+      </span>
+  <br />
     </span>
   
   
