update index.html ( changed the icon img)

--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
   
   <link rel="stylesheet" href="animation.css">
   
-  <link rel="icon" type="png" href="icons/fowl-art.png ">  
+  <link rel="icon" type="png" href=" images/fabian-codes-logo.png">  
 </head>
 
 <body> 
