update (changed the logo image to the new one)

--- a/web-dev-projects.html
+++ b/web-dev-projects.html
@@ -24,7 +24,7 @@
   <div class="logo-text">
     <span class=" ">
         <span class="icon-img">
-           <img src="images/fabian-codes-logo.png" alt="logo-icon" height="60px" width="60px"  class=" fab-logo" />
+           <img src=" images/FABIAN_codes-logo2.jpg" alt="logo-icon" height="60px" width="60px"  class=" fab-logo" />
     </span>
   
     
